Reorganizing files into project folders

--- a/Data-structures/solution.html
+++ b/Data-structures/solution.html
@@ -6,7 +6,7 @@
   content="The best, simple recipe for delicious Middle Eastern Shakshuka, 
   a cumin spiced tomato sauce with sautéd onions and chili peppers topped with poached eggs."
   charset="utf-8">
-  <script> src="https://assets.aaonline.io/fullstack/html-css/assets/external_javascript_example.js</script"></script>
+  <script> src="https://assets.aaonline.io/fullstack/html-css/assets/external_javascript_example.js"</script></script>
   <link rel="stylesheet" type="text/css" href="https://assets.aaonline.io/fullstack/html-css/assets/css_reset.css">
 </head>
 <body>
